# puma

./: .env.sample  README.md  main.py  pyproject.toml
app/: app.py  settings.py
app/errors/: helper_error.py
app/infra/playwright/: playwright.py
app/infra/psycopg/: postgres.py
app/infra/selectolax/: helpers.py  parser.py
